--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -90,6 +90,14 @@ a {
     color: var(--primary-text-color);
 }
 
+.sub-title {
+    font-size: 4rem;
+    font-weight: 700;
+    line-height: 1.25;
+
+    color: var(--primary-heading-color);
+}
+
 /* Header */
 .header {
     padding: 24px 0;
@@ -564,4 +572,206 @@ a {
     margin-top: 5px;
 
     font-size: 0.8rem;
+}
+
+/* Works */
+.works {
+    margin-top: 160px;
+}
+
+.works__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.works__media {
+    width: 49%;
+
+    position: relative;
+}
+
+.works__logo-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 64px;
+    height: 64px;
+
+    border-radius: 8px;
+
+    position: absolute;
+    top: 12%;
+    right: 28%;
+}
+
+.works__logo-wrapper::before {
+    content: "";
+
+    width: 62.5%;
+    height: 62.5%;
+
+    border-radius: inherit;
+
+    background: #f8fbfe;
+
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.works__logo-wrapper::after {
+    content: "";
+
+    width: 100%;
+    height: 100%;
+
+    border-radius: inherit;
+
+    background: var(--primary-color);
+
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    z-index: -1;
+}
+
+.works__logo {
+    position: relative;
+    z-index: 1;
+}
+
+.works__wrapper {
+    width: 82%;
+
+    position: relative;
+}
+
+.works__wrapper::after {
+    content: "";
+
+    display: inline-block;
+
+    width: 100%;
+    height: 89%;
+
+    background-image: url("../img/works-wrapper.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    z-index: -2;
+}
+
+.works__image {
+    display: block;
+
+    width: 97%;
+
+    margin: 0 auto;
+}
+
+.works-congratulations {
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+
+    padding: 15px 30px 15px 15px;
+    border-radius: 8px;
+    background: #fffdfa;
+
+    box-shadow: 0px 14px 34px 0px rgba(0, 0, 0, 0.07);
+
+    position: absolute;
+    right: 0;
+    bottom: 16%;
+}
+
+.works-congratulations__icon-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 40px;
+    height: 40px;
+
+    border-radius: 6px;
+
+    background: #4ab5e3;
+
+    position: relative;
+}
+
+.works-congratulations__icon-wrapper::after {
+    content: "";
+
+    display: inline-block;
+
+    width: 20px;
+    height: 20px;
+
+    border-radius: 50%;
+
+    background: #fff;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.works-congratulations__icon {
+    position: relative;
+    z-index: 1;
+}
+
+.works-congratulations__title {
+    font-size: 1.4rem;
+    font-weight: 600;
+
+    color: var(--primary-heading-color);
+}
+
+.works-congratulations__desc {
+    margin-top: 5px;
+
+    font-size: 1.2rem;
+
+    color: var(--primary-text-color);
+}
+
+.works__content {
+    width: 40%;
+}
+
+.works__list {
+    margin-top: 70px;
+}
+
+.works-item + .works-item {
+    margin-top: 30px;
+}
+
+.works-item__title {
+    font-size: 2.2rem;
+    font-weight: 600;
+    line-height: 1.45;
+
+    color: var(--primary-heading-color);
+}
+
+.works-item__desc {
+    margin-top: 16px;
+
+    font-size: 1.6rem;
+    line-height: 1.75;
+
+    color: var(--primary-text-color);
 }
