--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1318,3 +1318,118 @@ a {
     border-color: var(--primary-color);
     background: var(--primary-color);
 }
+
+/* Blog */
+.blog {
+    margin-top: 160px;
+}
+
+.blog__introduce {
+    margin-bottom: 6px;
+}
+
+.blog__top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.blog__desc {
+    width: 435px;
+
+    margin-top: 18px;
+
+    font-size: 1.6rem;
+    line-height: 1.75;
+}
+
+.blog__btn {
+    width: 123px;
+
+    background: #212832;
+}
+
+.blog__content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+
+    margin-top: 70px;
+}
+
+.blog-item {
+    display: flex;
+    align-items: center;
+    column-gap: 22px;
+
+    padding: 28px;
+    border: 1px solid #dfe2e8;
+    border-radius: 12px;
+
+    background: #fff;
+
+    transition: box-shadow 0.3s ease, border-color 0.3s ease;
+}
+
+.blog-item:hover {
+    border-color: #fff;
+    box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.07);
+}
+
+.blog-item:hover .blog-item__image {
+    transform: scale(1.2);
+}
+
+.blog-item__media {
+    flex-shrink: 0;
+
+    width: 160px;
+    height: 160px;
+
+    border-radius: 12px;
+
+    overflow: hidden;
+}
+
+.blog-item__image {
+    width: 100%;
+    height: 100%;
+
+    border-radius: inherit;
+
+    object-fit: cover;
+
+    transition: transform 0.3s ease-in-out;
+}
+
+.blog-item__date {
+    font-size: 1.4rem;
+    line-height: 1.72;
+
+    color: #696d76;
+}
+
+.blog-item__title {
+    margin-top: 10px;
+
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.67;
+
+    color: var(--primary-heading-color);
+}
+
+.blog-item__link {
+    margin-top: 20px;
+
+    font-size: 16px;
+    line-height: 1.63;
+
+    color: #696d76;
+
+    transition: color 0.3s ease;
+}
+
+.blog-item__link:hover {
+    color: #7264d6;
+}
