--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1433,3 +1433,99 @@ a {
 .blog-item__link:hover {
     color: #7264d6;
 }
+
+/* Download */
+.download {
+    margin-top: 160px;
+}
+
+.download__inner {
+    padding: 100px 0;
+    border-radius: 24px;
+
+    background: var(--primary-color);
+
+    position: relative;
+}
+
+.download__introduce {
+    justify-content: center;
+
+    color: #fff;
+}
+
+.download__introduce::before {
+    background: #fff;
+}
+
+.download__heading {
+    text-align: center;
+
+    color: #fff;
+}
+
+.download__desc {
+    width: 37%;
+
+    margin-top: 18px;
+    margin-right: auto;
+    margin-left: auto;
+
+    text-align: center;
+    font-size: 1.6rem;
+    line-height: 1.75;
+
+    color: #fff;
+}
+
+.download__store {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 16px;
+
+    margin-top: 38px;
+}
+
+.download__item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 182px;
+    height: 64px;
+
+    border-radius: 6px;
+
+    background: #fff;
+}
+
+.download__icon {
+    position: absolute;
+}
+
+.download__icon:first-of-type,
+.download__icon:nth-of-type(2) {
+    top: 11%;
+}
+
+.download__icon:first-of-type {
+    left: 10%;
+}
+
+.download__icon:nth-of-type(2) {
+    right: 10%;
+}
+
+.download__icon:nth-of-type(3),
+.download__icon:last-of-type {
+    bottom: 11%;
+}
+
+.download__icon:nth-of-type(3) {
+    left: 14%;
+}
+
+.download__icon:last-of-type {
+    right: 14%;
+}
